adjusted some margin from the heading to prevent spacing from showing at the top of the web page

--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@ body {
     background-image: url("https://www.studioredarchitects.com/wp-content/uploads/2016/06/HCSS-sup_img-2.jpg");
     background-size: cover;
     background-position: center top;
-    margin: 0;  
+    margin: 0;
   }
   
   div {
     background-color: rgb(0, 129, 72, .4);
+    padding: 50px;
   }
   
   label {
@@ -23,6 +24,8 @@ body {
   h1, #description {
     display: block;
     text-align: center;
+    margin: 0;
+    margin-bottom: 50px;
   }
   
   fieldset {
@@ -80,7 +83,7 @@ body {
     font-family: 'Poppins', sans-serif;
     border-radius: 3px;
     border: none;
-    background-color: 1AD571;
+    background-color: #1AD571;
   }
   
   input:hover, select:hover, option:hover, .checkbox-label:hover, .radio-label:hover {
